0.737 (12.12.2007) - John Siracusa <siracusa@gmail.com>

    * Added optional (on by default) coercion from (big)int auto-increment
      columns to (big)serial columns for MySQL and SQLite.

0.736 (11.13.2007) - John Siracusa <siracusa@gmail.com>

    * Added new_or_cached() method and associated caching framework.
    * Added dbi_connect() method.  (Patch by Peter Karman)
    * Removed mistakenly checked in breakpoint.

0.735 (07.21.2007) - John Siracusa <siracusa@gmail.com>

    * Improved parsing of SET values.
    * Fixed the test suite's detection of the broken DBD::SQLite 1.13.

0.734 (05.04.2007) - John Siracusa <siracusa@gmail.com>

    * Added the in_transaction() object method.
    * Added support for YAML and Perl-based fix-up files.
    * Fixed a dbh reference counting bug that was triggered when a Rose::DB
      object was given a $dbh that was generated elsewhere.
    * Improved detection of SKIP ... FIRST ... support in Informix.
    * Fixed a bug that prevented certain reserved words from being detected 
      as primary key columns in Postgres.  (Reported by Fred Cox)

0.733 (02.23.2007) - John Siracusa <siracusa@gmail.com>

    * Schema support enabled for MySQL.
    * Added support for Informix's "datetime year to month" column type.
    * Tweaked handling of doubled quotes in Postgres default column values.

0.732 (01.15.2007) - John Siracusa <siracusa@gmail.com>

    * Oracle support improved significantly.
    * Added MySQL $dbh attributes: mysql_auto_reconnect, mysql_enable_utf8,
      and mysql_use_result.
    * Rose::DB objects can now be constructed by specifying only a driver,
      even if no data sources are registered.
    * Documented new() behavior when parameters beyond just type and 
      domain are passed.  (Suggested by Christopher H. Laco)
    * Fixed a bug that prevented foreign keys with columns that use
      reserved words from being auto-initialized correctly.
      (Reported by Clayton Scott)
    * Improved DSN parsing.
